# hypeclip-ai

./: CMakeLists.txt  INSTALL-README.txt  Install-HypeClip-AI.bat  README.md  buildspec.json
.github/workflows/: build.yml
cmake/common/: bootstrap.cmake
data/locale/: en-US.ini
docs/: DESIGN_v2.md  SPEC.md
installer/: installer.iss
src/: plugin-main.cpp  plugin-support.h
src/audio/: AudioCapture.cpp  AudioCapture.hpp  AudioFeatures.cpp  AudioFeatures.hpp  GameAudioDetector.cpp  GameAudioDetector.hpp  VoiceExcitementDetector.cpp  VoiceExcitementDetector.hpp
src/core/: Config.cpp  Config.hpp  EventBus.cpp  EventBus.hpp  Log.hpp  MetricsHub.cpp  MetricsHub.hpp  PipelineController.cpp  PipelineController.hpp  Types.hpp
src/metadata/: AutoTagger.cpp  AutoTagger.hpp  AutoTitler.cpp  AutoTitler.hpp
src/replay/: ClipManager.cpp  ClipManager.hpp  InstantReplayDirector.cpp  InstantReplayDirector.hpp  ReplayBufferController.cpp  ReplayBufferController.hpp
src/rules/: RuleEngine.cpp  RuleEngine.hpp
src/scoring/: ConfidenceEngine.cpp  ConfidenceEngine.hpp  MomentumTracker.cpp  MomentumTracker.hpp  ScoreEngine.cpp  ScoreEngine.hpp  SessionLearner.cpp  SessionLearner.hpp
src/storage/: StorageManager.cpp  StorageManager.hpp
src/ui/: AudioTab.cpp  AudioTab.hpp  DashboardTab.cpp  DashboardTab.hpp  HighlightsTab.cpp  HighlightsTab.hpp  HypeClipDock.cpp  HypeClipDock.hpp  HypeMeter.cpp  HypeMeter.hpp  ReplayTab.cpp  ReplayTab.hpp  RulesTab.cpp  RulesTab.hpp  SettingsTab.cpp  SettingsTab.hpp  UiUtil.hpp
src/util/: RingBuffer.hpp
src/vision/: GameProfile.cpp  GameProfile.hpp  VisionAnalyzer.cpp  VisionAnalyzer.hpp
test/: CMakeLists.txt  test_main.cpp
